--- a/requirements.txt
+++ b/requirements.txt
@@ -1,35 +1,58 @@
+asgiref==3.4.1
 astroid==2.8.6
 async-generator==1.10
 attrs==21.2.0
 beautifulsoup4==4.10.0
 black==21.11b1
+blinker==1.4
+Brotli==1.0.9
 certifi==2021.10.8
 cffi==1.15.0
 charset-normalizer==2.0.8
 click==8.0.3
-cryptography==36.0.0
+cryptography==3.4.8
 fake-useragent==0.1.11
 flake8==4.0.1
+Flask==2.0.2
 h11==0.12.0
+h2==4.1.0
+hpack==4.0.0
+hyperframe==6.0.1
 idna==3.3
 isort==5.10.1
+itsdangerous==2.0.1
+Jinja2==3.0.3
+kaitaistruct==0.9
 lazy-object-proxy==1.6.0
+ldap3==2.9.1
 loguru==0.5.3
 lxml==4.6.4
+MarkupSafe==2.0.1
 mccabe==0.6.1
+mitmproxy==7.0.4
+msgpack==1.0.3
 mypy==0.910
 mypy-extensions==0.4.3
 outcome==1.1.0
+passlib==1.7.4
 pathspec==0.9.0
 platformdirs==2.4.0
+protobuf==3.18.1
+psycopg2==2.9.2
 psycopg2-binary==2.9.2
+publicsuffix2==2.20191221
+pyasn1==0.4.8
 pycodestyle==2.8.0
 pycparser==2.21
 pyflakes==2.4.0
 pylint==2.11.1
-pyOpenSSL==21.0.0
+pyOpenSSL==20.0.1
+pyparsing==2.4.7
+pyperclip==1.8.2
 regex==2021.11.10
 requests==2.26.0
+ruamel.yaml==0.17.16
+ruamel.yaml.clib==0.2.6
 selenium==4.1.0
 six==1.16.0
 sniffio==1.2.0
@@ -37,9 +60,14 @@ sortedcontainers==2.4.0
 soupsieve==2.3.1
 toml==0.10.2
 tomli==1.2.2
+tornado==6.1
 trio==0.19.0
 trio-websocket==0.9.2
 typing_extensions==4.0.0
+undetected-chromedriver==1.4.0
 urllib3==1.26.7
+urwid==2.1.2
+Werkzeug==2.0.2
 wrapt==1.13.3
 wsproto==1.0.0
+zstandard==0.15.2
