--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,6 +2,7 @@ version: '3'
 services:
   tor:
     image: tor:0.1
+    restart: always
     deploy:
       replicas: 1
       restart_policy:
@@ -11,7 +12,7 @@ services:
     ports:
       - 9050:9050
 
-  bot1:
+  yandex-bot:
     image: test-bot:0.1
     deploy:
       replicas: 2
