add bridges to torrc

--- a/tor_docker/Dockerfile
+++ b/tor_docker/Dockerfile
@@ -1,6 +1,6 @@
 FROM alpine:latest
 
-RUN apk update && apk add tor
+RUN apk update && apk add tor obfs4proxy
 
 COPY torrc /etc/tor/torrc
 RUN chown -R tor /etc/tor
