add bridges to torrc#2

--- a/tor_docker/Dockerfile
+++ b/tor_docker/Dockerfile
@@ -1,7 +1,13 @@
 FROM alpine:latest
 
 RUN apk update && apk add tor go git ca-certificates \
-    && go get git.torproject.org/pluggable-transports/obfs4.git/obfs4proxy \
+    && mkdir -p /go/src /go/bin \
+    && chmod -R 644 /go
+
+ENV GOPATH /go
+ENV PATH /go/bin:$PATH
+
+RUN go get git.torproject.org/pluggable-transports/obfs4.git/obfs4proxy \
     && mv /go/bin/obfs4proxy /usr/bin/obfs4proxy
 
 COPY torrc /etc/tor/torrc
