add bridges to torrc#4

--- a/tor_docker/Dockerfile
+++ b/tor_docker/Dockerfile
@@ -7,8 +7,10 @@ RUN apk update && apk add tor go git ca-certificates \
 ENV GOPATH /go
 ENV PATH /go/bin:$PATH
 
-RUN go get gitlab.com/yawning/obfs4.git \
-    && mv /go/bin/obfs4proxy /usr/bin/obfs4proxy
+run git clone https://gitlab.com/yawning/obfs4.git \
+    && cd obfs4 \
+    && go build -o obfs4proxy ./obfs4proxy \
+    && mv obfs4proxy/obfs4proxy /usr/bin/obfs4proxy
 
 COPY torrc /etc/tor/torrc
 RUN chown -R tor /etc/tor
